# HairOnBaldModel

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
lib/: glad.lib  glm.lib  kubazip.lib  polyclipping.lib
shaders/: fragment.glsl  vertex.glsl
src/: camera.h  hair_transform.h  input.h  main.cpp  model.h  shader.h  ui.h
